crates/cli/src/tui/views/snapshots/wasm__tui__views__snapshot_tests__tab_bar_first_selected_snapshot.snap
---
source: crates/cli/src/tui/views/snapshot_tests.rs
expression: output
---
┌ Test App - ready ────────────────────────────────────────┐
│ First [1] │ Second [2] │ Third [3]                       │
└──────────────────────────────────────────────────────────┘
